# erm

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docs.yml  release.yml  version-bump.yml
docs/: README.md  detection.md  index.md  modes-and-padding.md  recipes.md  render-pipeline.md  transcription.md  troubleshooting.md  usage.md  video-render.md
scripts/: build-python.sh  common.sh  dump_transcript.py  publish-python.sh  rerender.py  sync-version.sh
skills/erm/: SKILL.md
skills/erm-tune/: SKILL.md
src/erm/: __init__.py  __main__.py  acoustic.py  asr.py  audio.py  cli.py  detect.py  envelope.py  ffmpeg_ops.py  fillers.py  models.py  ranges.py  refine.py  validate.py  video.py
tests/: test_asr_fallback.py  test_cli.py  test_integration.py  test_pure.py  test_render_modes.py  test_video.py
